--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <h1>This is a header and I had no purpose for this header, and I still have no purpose for this</h1>
+            <h1>Tôi có mục đích ngay bây giờ!!!</h1>
             <link rel="stylesheet" href="styles.css">
         </header>
     </body>
@@ -24,10 +24,10 @@
         <button type="button" onclick="decideRaysFate('aqua')">Remove Rays power</button>
         <div>
             <article>
-                <h2>My first programming language</h2>
-                <p>I learned C++, I liked C++. It took me some time to get used to it but I really like it.</p>
-                <p>I struggle with anything related to front end coding</p>
-                <p>Backend coding is easier than frontend coding :)</p>
+                <h2>שפת התכנות הראשונה שלי</h2>
+                <p>למדתי C, אהבתי C. לקח לי קצת זמן להתרגל לזה אבל אני מאוד אוהב את זה.</p>
+                <p>אני נאבק בכל מה שקשור לקידוד קצה</p>
+                <p>קידוד אחורי קל יותר מקידוד קצה :)</p>
             </article>
         </div>
         <table id="TablePower">
